# testversionrag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.vllm  README.md  compose.yaml  pyproject.toml  requirements-vllm.txt  requirements.txt
evaluation/: NPA_TESTSET.md  npa_testset.jsonl  ragas_documents_testset.jsonl  synthetic_testset.jsonl  testset.example.jsonl
evaluation/synthetic_corpus/: hr_policy.md  it_sla.md  office_contacts.md  product_nimbus.md  sales_report.md  supply_contract.md
src/rag_app/: __init__.py  __main__.py  api.py  artifact_cache.py  benchmark.py  chat.py  cli.py  config.py  deepeval_evaluation.py  documents.py  embeddings.py  evaluation.py  generation.py  metric_cache.py  ragas_evaluation.py  reranker.py  retrieval.py  retrieval_tuning.py  service.py  vector_store.py
src/rag_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_api.py  test_artifact_cache.py  test_benchmark.py  test_chat.py  test_cli.py  test_config.py  test_deepeval_evaluation.py  test_documents_excel.py  test_documents_rtf.py  test_evaluation.py  test_generation.py  test_hybrid_retriever.py  test_metric_cache.py  test_ragas_evaluation.py  test_reranker.py  test_retrieval.py  test_retrieval_tuning.py  test_service_index.py
