[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-project"
version = "0.1.0"
description = "Modular hybrid RAG pipeline extracted from a Jupyter notebook"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.34",
    "beautifulsoup4>=4.12",
    "docling>=2.113.0",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pypdf>=5.0",
    "python-dotenv>=1.0",
    "python-docx>=1.1",
    "qdrant-client>=1.12",
    "requests>=2.32",
    "sentence-transformers>=3.2",
    "torch>=2.2",
    "transformers>=5.4",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
rag = "rag_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
